[gd_scene load_steps=11 format=3 uid="uid://cnyo8q1t475w6"]

[ext_resource type="Texture2D" uid="uid://cdvqfoaf2fmfq" path="res://addons/attachmentgui/Sprites/button01.png" id="1_rb5mb"]
[ext_resource type="Script" path="res://addons/attachmentgui/AttachmentGui.gd" id="1_rn36r"]
[ext_resource type="PackedScene" uid="uid://054muqtx37p3" path="res://addons/attachmentgui/Scenes/CreatureCreate.tscn" id="2_6gnth"]
[ext_resource type="LabelSettings" uid="uid://drwy0e5elc4qn" path="res://addons/attachmentgui/attachment_gui_mainlabel.tres" id="4_3i1o5"]
[ext_resource type="Texture2D" uid="uid://bhh2826f61ahd" path="res://addons/attachmentgui/Sprites/button02.png" id="4_w7l0e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i810g"]
bg_color = Color(0.129412, 0.145098, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdbwr"]
bg_color = Color(0.109804, 0.121569, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4040"]
bg_color = Color(0.176471, 0.196078, 0.223529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v55td"]
font_size = 24
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cc6ja"]
bg_color = Color(0.176471, 0.196078, 0.223529, 1)

[node name="AttachmentGuiDock" type="Control" node_paths=PackedStringArray("new_button", "edit_button", "socket_button", "file_dialog", "select_dialog", "path_label", "current_scene_label", "parts_container", "components_container", "cosmetics_container")]
layout_mode = 3
anchor_right = 0.499
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1.15198
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rn36r")
TEMPLATE_SCENE = ExtResource("2_6gnth")
new_button = NodePath("MainPanel/NewButton")
edit_button = NodePath("MainPanel/EditButton")
socket_button = NodePath("MainPanel/SocketButton")
file_dialog = NodePath("CreateFileDialog")
select_dialog = NodePath("SelectFileDialog")
path_label = NodePath("MainPanel/Path_Label")
current_scene_label = NodePath("MainPanel/CurrentSceneLabel")
parts_container = NodePath("PartsPanel/ScrollContainer/BoxContainer")
components_container = NodePath("ComponentsPanel/ScrollContainer/BoxContainer")
cosmetics_container = NodePath("CosmeticsPanel/ScrollContainer/BoxContainer")

[node name="CreateFileDialog" type="FileDialog" parent="."]
size = Vector2i(303, 630)

[node name="SelectFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(303, 630)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i810g")

[node name="NewButton" type="Button" parent="MainPanel"]
layout_mode = 1
offset_left = 34.0
offset_top = 66.0
offset_right = 113.0
offset_bottom = 91.0
tooltip_text = "Create a new creature!"
theme_override_styles/normal = SubResource("StyleBoxFlat_mdbwr")
text = "New"
icon = ExtResource("1_rb5mb")

[node name="SelectButton" type="Button" parent="MainPanel"]
layout_mode = 1
offset_left = 128.0
offset_top = 66.0
offset_right = 208.0
offset_bottom = 91.0
tooltip_text = "Select an already existing creature"
theme_override_styles/normal = SubResource("StyleBoxFlat_mdbwr")
text = "Select"
icon = ExtResource("1_rb5mb")

[node name="EditButton" type="Button" parent="MainPanel"]
layout_mode = 1
offset_left = 34.0
offset_top = 110.0
offset_right = 113.0
offset_bottom = 141.0
tooltip_text = "Edit the current creature"
disabled = true
text = "Edit"
icon = ExtResource("1_rb5mb")

[node name="SocketButton" type="Button" parent="MainPanel"]
layout_mode = 1
offset_left = 305.0
offset_top = 123.0
offset_right = 419.0
offset_bottom = 154.0
tooltip_text = "Add a limb-socket into the scene"
text = "Add Socket"
icon = ExtResource("4_w7l0e")

[node name="ExportButton" type="Button" parent="MainPanel"]
layout_mode = 1
offset_left = 34.0
offset_top = 161.0
offset_right = 113.0
offset_bottom = 192.0
tooltip_text = "Export the creature"
disabled = true
text = "Export"
icon = ExtResource("1_rb5mb")

[node name="Path_Label" type="Label" parent="MainPanel"]
layout_mode = 1
offset_left = 305.0
offset_top = 39.0
offset_right = 368.0
offset_bottom = 70.0
text = "PATH:"
label_settings = ExtResource("4_3i1o5")
horizontal_alignment = 1
uppercase = true

[node name="GUILABEL" type="Label" parent="MainPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 4.0
offset_right = 201.0
offset_bottom = 35.0
text = "Attachment gui"
label_settings = ExtResource("4_3i1o5")
horizontal_alignment = 1
uppercase = true

[node name="CurrentSceneLabel" type="Label" parent="MainPanel"]
layout_mode = 1
offset_left = 305.0
offset_top = 8.0
offset_right = 379.0
offset_bottom = 39.0
text = "SCENE:"
label_settings = ExtResource("4_3i1o5")
horizontal_alignment = 1
uppercase = true

[node name="SymmetryCheck" type="CheckButton" parent="MainPanel"]
layout_mode = 1
offset_left = 305.0
offset_top = 173.0
offset_right = 432.0
offset_bottom = 204.0
text = "Symmetry"

[node name="PartsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.401
offset_top = 260.0
offset_bottom = 541.152
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h4040")

[node name="ScrollContainer" type="ScrollContainer" parent="PartsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.095
anchor_right = 1.0
anchor_bottom = 0.968
offset_left = 0.128
offset_top = -0.19001
offset_right = -7.0
offset_bottom = -1.13608
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 2

[node name="BoxContainer" type="VBoxContainer" parent="PartsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PartsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Parts:"
label_settings = SubResource("LabelSettings_v55td")

[node name="ComponentsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.401
offset_top = 260.0
offset_bottom = 402.152
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cc6ja")

[node name="ScrollContainer" type="ScrollContainer" parent="ComponentsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.993
anchor_bottom = 1.0
offset_top = 39.0
offset_right = 0.263
offset_bottom = 1.0

[node name="BoxContainer" type="VBoxContainer" parent="ComponentsPanel/ScrollContainer"]
clip_contents = true
layout_mode = 2

[node name="Label" type="Label" parent="ComponentsPanel"]
layout_mode = 0
offset_left = 2.0
offset_right = 223.0
offset_bottom = 34.0
text = "Components:"
label_settings = SubResource("LabelSettings_v55td")

[node name="CosmeticsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.401
offset_top = 260.0
offset_bottom = 402.152
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cc6ja")

[node name="ScrollContainer" type="ScrollContainer" parent="CosmeticsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.993
anchor_bottom = 1.0
offset_top = 39.0
offset_right = 0.263
offset_bottom = 1.0

[node name="BoxContainer" type="VBoxContainer" parent="CosmeticsPanel/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CosmeticsPanel"]
layout_mode = 0
offset_left = 2.0
offset_right = 223.0
offset_bottom = 34.0
text = "Cosmetics:"
label_settings = SubResource("LabelSettings_v55td")

[node name="selection" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_right = 0.002
offset_left = 285.846
offset_top = 260.0
offset_right = 468.846
offset_bottom = 300.0
tooltip_text = "Switch between components and parts"
selected = 0
item_count = 3
popup/item_0/text = "Components"
popup/item_1/text = "Body Parts"
popup/item_1/id = 1
popup/item_2/text = "Cosmetics"
popup/item_2/id = 2

[connection signal="file_selected" from="CreateFileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SelectFileDialog" to="." method="select_creature"]
[connection signal="pressed" from="MainPanel/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="MainPanel/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="MainPanel/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MainPanel/SocketButton" to="." method="_on_socket_button_pressed"]
[connection signal="item_selected" from="selection" to="." method="_on_selection"]
